# xbmc-pvr-addons

./: configure.ac
addons/: Makefile.am
addons/pvr.sledovanitv.cz/: Makefile.am
addons/pvr.sledovanitv.cz/addon/: addon.xml.in
addons/pvr.sledovanitv.cz/addon/resources/language/English/: strings.po
addons/pvr.sledovanitv.cz/src/: PVRIptvData.cpp  PVRIptvData.h  apimanager.cpp  apimanager.h  client.cpp  client.h
